Voting blocs error fixed